# gbcxx

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  emscripten_shell.html  imgui.ini  lsan_suppr.txt
.github/workflows/: emscripten-github-pages.yml  emscripten_build_deploy.yml  ubuntu.yml
cmake/: suppress-third-party-warnings.cmake
src/: emulator.cpp  font_data.hpp  main.cpp  main_app.cpp  main_app.hpp  sdl_window.cpp  sdl_window.h  sdl_window.hpp  util.cpp  util.h  util.hpp
src/common/: error.h  filesystem.cpp  filesystem.h  logging.h  try.h
src/core/: bus.cpp  bus.hpp  cartridge.cpp  cartridge.hpp  constants.h  constants.hpp  core.cpp  core.hpp  cpu.cpp  cpu.hpp  emulator.cpp  emulator.h  emulator.hpp  interrupt.hpp  joypad.hpp  mbc.cpp  mbc.h  mbc.hpp  memory.cpp  memory.h  memory.hpp  ppu.cpp  ppu.hpp  processor.cpp  processor.h  processor.hpp  processor_instr.cpp  timer.cpp  timer.hpp  util.cpp  util.hpp  video.cpp  video.h  video.hpp
src/core/cpu/: flags.cpp  flags.h  processor.cpp  processor.h  registers.cpp  registers.h
src/core/mbc/: mbc0.cpp  mbc0.hpp  mbc1.cpp  mbc1.hpp
src/core/memory/: bus.cpp  bus.hpp  cartridge.cpp  cartridge.hpp  mbc.cpp  mbc.hpp  mmu.cpp  mmu.h
src/core/memory/mbc/: mbc0.cpp  mbc0.hpp  mbc1.cpp  mbc1.hpp  mbc2.cpp  mbc2.hpp  mbc3.cpp  mbc3.hpp
src/core/sm83/: cpu.cpp  cpu.hpp  interrupts.hpp  timer.cpp  timer.hpp
src/core/video/: lcd_control.hpp  lcd_status.hpp  ppu.cpp  ppu.hpp  window.hpp
test/: CMakeLists.txt  cpu_flags_test.cpp  cpu_registers_test.cpp  cpu_single_step_tests.cpp  main.cpp
